tests/fixtures/invalid/int_notin_none.py
# Cannot use 'not in' with Int and None
x: bool = 1 not in None
